# distmark

./: .gitignore  README.md  docker-compose.yaml  generate_protos.sh  performance_report.md  run_customer_interface.sh  run_seller_interface.sh
ansible/: ansible.cfg  create-servers.sh  deploy.sh  deploy.yml  example.hosts.yml  restart.yml
buyer-frontend/: Dockerfile  config.py  db.py  interface.py  pyproject.toml  requirements.txt  server.py
buyer-interface/: cart.go  commands.go  go.mod  main.go  menu.go  models.go  utils.go
customers-database/: Dockerfile  compose.yaml  customers_pb2.py  customers_pb2_grpc.py  db.py  generate_pb.sh  pyproject.toml  requirements.txt  seed.sql  server.py  utils.py
customers-database/proto/: customers.proto  customers_pb2.py  customers_pb2.pyi  customers_pb2_grpc.py
customers-database/sequencer/: broadcast.py  member.py  messages.py
customers-database/tests/: test_broadcast.py
evaluation/: main.py  outcome.txt  report.txt  report_one_seller_follower_down.txt  report_one_seller_leader_down.txt  report_one_seller_one_buyer_down.txt
payments-api/: Dockerfile  server.py
products-database/: Dockerfile  compose.yaml  config.py  db.py  generate_pb.sh  products_pb2.py  products_pb2.pyi  products_pb2_grpc.py  products_raft.py  pyproject.toml  requirements.txt  run-test.sh  seed.sql  server.py  utils.py
proto/: customers.proto  products.proto
seller-frontend/: Dockerfile  config.py  db.py  go.mod  interface.py  pyproject.toml  requirements.txt  seed.py  server.py
seller-interface/: commands.go  go.mod  interactive.go  main.go  (+2 more)
(+11 files in other folders)
